--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,17 +3,22 @@
   <head>
     <meta charset="UTF-8">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+      body {
+          background-color: #B8B8B8
+      }
+  </style>
   </head>
 
   <body>
-    <section id="appContainer" class="main">
+    <!-- <section id="appContainer" class="main">
       <div id="loading">Loading...</div>
-    </section>
+    </section> -->
 
     <% if (htmlWebpackPlugin.options.env === 'dev') { %>
-    <script src="js/rStats.js"></script>
+    <!-- <script src="js/rStats.js"></script>
     <script src="js/rStats.extras.js"></script>
-    <script src="js/dat.gui.min.js"></script>
+    <script src="js/dat.gui.min.js"></script> -->
     <% } %>
   </body>
 </html>
