--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,14 +11,14 @@
   </head>
 
   <body>
-    <!-- <section id="appContainer" class="main">
+    <section id="appContainer" class="main">
       <div id="loading">Loading...</div>
-    </section> -->
+    </section>
 
     <% if (htmlWebpackPlugin.options.env === 'dev') { %>
-    <!-- <script src="js/rStats.js"></script>
+    <script src="js/rStats.js"></script>
     <script src="js/rStats.extras.js"></script>
-    <script src="js/dat.gui.min.js"></script> -->
+    <script src="js/dat.gui.min.js"></script>
     <% } %>
   </body>
 </html>
