--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,14 +11,14 @@
   <script defer src="js/runtime.bundle.js"></script><script defer src="js/vendors.bundle.js"></script><script defer src="js/main.bundle.js"></script><link href="js/../css/main.css" rel="stylesheet"></head>
 
   <body>
-    <!-- <section id="appContainer" class="main">
+    <section id="appContainer" class="main">
       <div id="loading">Loading...</div>
-    </section> -->
+    </section>
 
     
-    <!-- <script src="js/rStats.js"></script>
+    <script src="js/rStats.js"></script>
     <script src="js/rStats.extras.js"></script>
-    <script src="js/dat.gui.min.js"></script> -->
+    <script src="js/dat.gui.min.js"></script>
     
   </body>
 </html>
